@@ -10,6 +10,8 @@ FEATURES:
 	- Support DLV records.
 	- New option 'tcp-query-count:', to limit the maximum number of
 		DNS queries on a singel tcp connection.
+	- New option 'tcp-timeout:', to override the default tcp timeout.
+		The default can also be set at build time, --with-tcp-timeout=<number>.
 
 3.2.3
 =============
