@@ -155,6 +155,9 @@ Default is 10. Same as commandline option
 The maximum number of queries served on a single TCP connection.
 Default is 0, meaning there is no maximum .
 .TP
+.B tcp\-timeout:\fR <number>
+Overrides the default TCP timeout . 
+.TP
 .B pidfile:\fR <filename>
 Use the pid file instead of the platform specific default, usually 
 .IR /var/run/nsd.pid. 
